# ubid-platform

./: .gitattributes  DEMO_SCRIPT.md  DEPLOY.md  HANDOFF.md  IMPROVEMENTS.md  MODEL_DESCRIPTION.md  PRESENTATION.md  Problem_statement.md  README.md  TECH_RATIONALE.md  karnataka_source_schemas.md  presentation.html  proposal_extracted.txt
ubid_platform/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
ubid_platform/data/dictionaries/: abbreviations.json  legal_form_patterns.json  locality_coordinates.json  locality_synonyms.json  sector_priors.json
ubid_platform/data/synthetic/: bescom_records.csv  bwssb_events.jsonl  bwssb_records.csv  ekarmika_records.csv  events_stream.jsonl  fbis_records.csv  ground_truth_links.csv  kspcb_records.csv
ubid_platform/frontend/: reviewer_console.py
ubid_platform/frontend/assets/: README.md
ubid_platform/migrations/: 001_init.sql
ubid_platform/nominatim_data/: README.md
ubid_platform/scripts/: analyze_dormant_misses.py  backfill_geocoding.py  check_event_dupes.py  compare_geocoding_modes.py  compute_verdicts.py  demo_reviewer_loop.py  evaluate.py  gen_bwssb_data.py  recluster.py  refresh_event_ubids.py  regeocode_with_nominatim.py  rescore_pairs.py  send_events.py  test_kannada_transliteration.py  train_scorer.py  wipe_data.py
ubid_platform/src/ubid/: config.py
ubid_platform/src/ubid/activity/: decay.py  quarantine.py  signal_catalog.py  verdict.py
ubid_platform/src/ubid/api/: deps.py  (+1 more)
ubid_platform/tests/: conftest.py  test_activity.py  test_canonicalize.py  test_scoring.py
(+35 files in other folders)
